[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/NetworkSetup.gd" type="Script" id=1]

[node name="NetworkSetup" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MultiplayerConfig" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="MultiplayerConfig"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -217.0
margin_top = -113.0
margin_right = 217.0
margin_bottom = 113.0
custom_constants/separation = 26

[node name="CreateServer" type="Button" parent="MultiplayerConfig/VBoxContainer"]
margin_right = 434.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
text = "Create Server"

[node name="JoinServer" type="Button" parent="MultiplayerConfig/VBoxContainer"]
margin_top = 126.0
margin_right = 434.0
margin_bottom = 226.0
rect_min_size = Vector2( 0, 100 )
text = "Join Server"

[node name="ServerIpAddress" type="LineEdit" parent="MultiplayerConfig"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -115.0
margin_top = 71.0
margin_right = 115.0
margin_bottom = 131.0
text = "Enter IP Address:"
align = 1

[node name="Lobby" type="Control" parent="."]
visible = false
margin_right = 1024.0
margin_bottom = 600.0

[node name="ItemList" type="ItemList" parent="Lobby"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 179.0
margin_top = -157.0
margin_right = 456.0
margin_bottom = 158.0

[node name="Button" type="Button" parent="Lobby"]
visible = false
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -427.0
margin_top = -36.0
margin_right = -229.0
margin_bottom = 36.0
text = "Start Game"

[node name="Timer" type="Timer" parent="."]
wait_time = 240.0
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasLayer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -31.0
margin_bottom = 17.0
text = "4:00"
